entity-registry/src/main/pegasus/com/datahub/test/invalid/MissingSearchableIndexType.pdl
namespace com.datahub.test.invalid

@Aspect = {
  "name": "invalidAspect"
}
record MissingSearchableIndexType {
  @Searchable = {
    "fieldName": "textField"
  }
  textField: string
}